--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="all-tasks" data-list-display-container>
         <h2 class="task-list-title">My List</h2>
         <form action="" id="newListForm" data-new-list-form>
-            <input type="text" id="newListInput" placeholder="Create a List" class="new list" data-new-list-input>
+            <input type="text" id="newListInput" placeholder="Search | Create a List" class="new list" data-new-list-input>
             <button class="btn create" id="add-list">+</button>
         </form>
         <ul class="task-list" data-lists>
@@ -27,16 +27,22 @@
     <!-- Task Container -->
     <div class="todo-list" id="taskDisplayContainer" data-task-display-container>
 
-        <div class="todo-header">
+        <div class="todo-header" data-todo-header>
             <h2 class="list-title" id="listTitleElement" data-list-title></h2>
             <p class="task-count" id="listCountElement" data-list-count></p>
+        </div>
+        <div>
+            <form action="" id="newEditForm" data-edit-list>
+                <input type="text" class="edit" id="input-update" placeholder="Edit List Name" data-updated-list-name>
+                <button class="btn create" id="update-list" data-update-list>Edit</button>
+            </form>
         </div>
 
         <div class="todo-body">
 
             <div class="new-task-creator">
                 <form action="" id="newTaskForm" data-new-task-form>
-                    <input type="text" class="new task" id="input-item" placeholder="Add Task Item" data-new-task-input>
+                    <input type="text" class="new task" id="input-item" placeholder="Search | Add Task Item" data-new-task-input>
                     <button class="btn create" id="add-item">+</button>
                 </form>
             </div>
@@ -60,6 +66,13 @@
 
         <div class="priority-header">
             <h2 class="task-title" id="taskTitleElement" data-task-title></h2>
+        </div>
+
+        <div>
+            <form action="" data-edit-task>
+                <input type="text" class="edit" id="input-update-task" placeholder="Edit Task Name" data-updated-task-name>
+                <button class="btn create" id="update-task" data-update-task>Edit</button>
+            </form>
         </div>
 
         <div class="priority-body">
